# ns-freestanding-std

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: ns_std_build_functions.cmake  update_vcs_metadata.cmake
feature_checks/: has_16bit_integral_type.cxx  has_32bit_integral_type.cxx  has_64bit_integral_type.cxx  has_8bit_integral_type.cxx  has_has_trivial_destructor_intrinsic.cxx  has_has_unique_object_representations_intrinsic.cxx  has_has_virtual_destructor_intrinsic.cxx  has_is_aggregate_intrinsic.cxx  has_is_assignable_intrinsic.cxx  has_is_base_of_intrinsic.cxx  has_is_class_intrinsic.cxx  has_is_constructible_intrinsic.cxx  has_is_empty_intrinsic.cxx  has_is_enum_intrinsic.cxx  has_is_final_intrinsic.cxx  has_is_nothrow_assignable_intrinsic.cxx  has_is_nothrow_constructible_intrinsic.cxx  has_is_polymorphic_intrinsic.cxx  has_is_standard_layout_intrinsic.cxx  has_is_trivial_intrinsic.cxx  has_is_trivially_assignable_intrinsic.cxx  has_is_trivially_constructible_intrinsic.cxx  has_is_trivially_copyable_intrinsic.cxx  has_is_union_intrinsic.cxx
feature_checks/include/: feature_check_common.hxx
feature_checks/include/feature_check/: any_type_with_bit_size.hxx  standard_types.hxx
generated.in/ns/std/: features.hxx.in  version.hxx.in
generated.in/ns/std/vcs/: metadata.hxx.in
include/ns/std/: concepts  cstddef  cstdint  cstdlib  limits  type_traits  utility
include/ns/std/ns-std-detail/: _core.hxx
tests/: is_base_of_test.cxx  simple_test.cxx
